--- a/bin/install
+++ b/bin/install
@@ -13,11 +13,7 @@ install() {
   local version=$2
   local install_path=$3
 
-  if [ -z "${TMPDIR+x}" ]; then
-    local tmp_download_dir="$(mktemp -d)"
-  else
-    local tmp_download_dir="$TMPDIR"
-  fi
+  local tmp_download_dir="$(mktemp -d)"
 
   local download_url="https://github.com/google/go-jsonnet/archive/v${version}.tar.gz"
 
@@ -25,13 +21,18 @@ install() {
   tar xf "${tmp_download_dir}/go-jsonnet_${version}.tar.gz" -C "${tmp_download_dir}" || exit 3
 
   (
-    cd "${tmp_download_dir}"
+    cd "${tmp_download_dir}/go-jsonnet-${version}"
     go build ./cmd/jsonnet
-    go build ./cmd/jsonnetfmt
+    if [ -z ./cmd/jsonnetfmt ]; then
+      go build ./cmd/jsonnetfmt
+    fi
   )
 
   mkdir "${install_path}/bin"
-  cp "${tmp_download_dir}/jsonnet" "${tmp_download_dir}/jsonnetfmt" "${install_path}/bin/"
+  cp "${tmp_download_dir}/go-jsonnet-${version}/jsonnet" "${install_path}/bin/"
+  if [ -z "${tmp_download_dir}/go-jsonnet-${version}/jsonnetfmt" ]; then
+    cp "${tmp_download_dir}/go-jsonnet-${version}/jsonnetfmt" "${install_path}/bin/"
+  fi
 }
 
 install "$ASDF_INSTALL_TYPE" "$ASDF_INSTALL_VERSION" "$ASDF_INSTALL_PATH"
